--- a/docs/posts/10wk-2.out.ipynb
+++ b/docs/posts/10wk-2.out.ipynb
@@ -13,7 +13,7 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "6de54427-6178-4783-901b-6b52c8e29cdf"
+      "id": "b8aa8bda-0944-48c6-8cf2-f27facd6c1f5"
     },
     {
       "cell_type": "code",
@@ -33,7 +33,7 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "f19e53ed-d4b4-45eb-9ed6-6ea13eeb3c35"
+      "id": "d9690832-0d83-4efa-8124-0b526fa42e4f"
     },
     {
       "cell_type": "code",
@@ -57,7 +57,7 @@
         "\n",
         "`-` 주어진 자료가 아래와 같다고 하자."
       ],
-      "id": "ad271588-9a6c-409d-a9bc-37cc0a18c02f"
+      "id": "e8a51841-0653-4761-ad6d-a309138cf002"
     },
     {
       "cell_type": "code",
@@ -103,7 +103,7 @@
       "source": [
         "`-` 문제1: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "61000525-2d83-4ceb-a026-c7e4b946ec4b"
+      "id": "64199b66-6e0b-48f3-8443-be57622b565d"
     },
     {
       "cell_type": "code",
@@ -145,7 +145,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "31376f54-d23f-4e92-8096-fdeb59e5089e"
+      "id": "d0b41768-b7a2-416d-acd7-e6d92276b6e5"
     },
     {
       "cell_type": "code",
@@ -199,7 +199,7 @@
       "source": [
         "`-` 문제2: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "b893d4e6-6747-4c37-9deb-9481b0138eca"
+      "id": "6cf945d5-5b15-4816-97ce-8dcecb8fe04d"
     },
     {
       "cell_type": "code",
@@ -242,7 +242,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "8a27e3e1-1807-4302-9873-3243af11e3f1"
+      "id": "2cad792c-3bd7-4555-8195-89d9552686c7"
     },
     {
       "cell_type": "code",
@@ -302,7 +302,7 @@
         "\n",
         "`-` Data"
       ],
-      "id": "f88fc267-b4ba-4831-83cf-57ff08253c5e"
+      "id": "8eed7ceb-6251-4b94-ae35-bdb84101c537"
     },
     {
       "cell_type": "code",
@@ -355,7 +355,7 @@
         "옥순의I성향$\\times$영식의I성향 $+$ 옥순의N성향$\\times$영식의N성향 $+$\n",
         "옥순의매력 $+$ 영식의매력"
       ],
-      "id": "1aaeeb25-e426-491d-9cd2-701cdea9533c"
+      "id": "e5bf2921-ba31-4ab7-8548-19b6389dfe6b"
     },
     {
       "cell_type": "code",
@@ -381,7 +381,7 @@
         "**(2)** 영자(IN)와 다호(ES)의 궁합 $\\approx$ 영자I성향$\\times$다호I성향\n",
         "$+$ 영자N성향$\\times$다호의N성향 $+$ 영자의매력 $+$ 다호의매력"
       ],
-      "id": "c5056877-a139-4c07-9571-cddca370d6d4"
+      "id": "8abf3cd5-a5bf-42e1-844c-bdd4d7a261cf"
     },
     {
       "cell_type": "code",
@@ -407,7 +407,7 @@
         "**(3)** 하니(I)와 영호(IS)의 궁합 $\\approx$ 하니I성향$\\times$영호I성향\n",
         "$+$ 하니N성향$\\times$영호의N성향 $+$ 하니의매력 $+$ 영호의매력"
       ],
-      "id": "83698a57-bb0c-4d35-b38b-0c6ff746054f"
+      "id": "f5e2431c-08c1-44d7-b3e6-2fb7cd1c9a50"
     },
     {
       "cell_type": "code",
@@ -434,7 +434,7 @@
         "\n",
         "`-` 전체 사용자의 설정값"
       ],
-      "id": "8c19dea2-af51-46bd-8564-505d2b55a0b1"
+      "id": "a772d916-1086-4c83-bf6d-3fabfd1f614a"
     },
     {
       "cell_type": "code",
@@ -487,7 +487,7 @@
       "source": [
         "`-` 아래의 행렬곱 관찰"
       ],
-      "id": "dc4ce03d-8b01-44d8-8a57-782f13bb42f3"
+      "id": "bccb2ef4-0f25-4b37-af11-a82d23b7e0fb"
     },
     {
       "cell_type": "code",
@@ -532,7 +532,7 @@
         "\n",
         "`-` 주어진 자료와 우리가 임의로 만든 궁합매트릭스를 비교해보자."
       ],
-      "id": "96997a51-1fb3-4737-bdc3-931159e815c0"
+      "id": "9de6cf2d-3a80-4a99-b6a0-aab334950a12"
     },
     {
       "cell_type": "code",
@@ -598,6 +598,8 @@
         "| 옥순(IN) | 영철(IN) | 1.22, 0.49 | 1.22, 0.45 | 1.4884[1] | 0.2205[2]  | 2.31[3] | 4.0189 | 4.02 |\n",
         "| 옥순(IN) | 영호(IS) | 1.22, 0.49 | 1.23, -0.7 | 1.1576[4] | -0.3423[5] | 2.32[6] | 3.4776 | 3.45 |\n",
         "|    …     |    …     |     …      |     …      |     …     |     …      |         |        |      |\n",
+        "| 하니(I)  | 영식(IN) | 0.20, 0.00 | 1.20, 0.5  |   0.24    |     0      |   4.8   |  5.04  | 4.85 |\n",
+        "|    …     |    …     |     …      |     …      |     …     |     …      |         |        |      |\n",
         "\n",
         "-   걱정1: 5.0이 넘는 값도 있네? 잘못잡으면 음수가 나올지도?\n",
         "-   걱정2: 저러한 yhat (4.0189, 3.4776)을 만드는게 꼭 저 조합만 있는게\n",
@@ -650,7 +652,7 @@
         "\n",
         "[6] 1.21+1.11 = 2.32"
       ],
-      "id": "929f1a98-ccea-4ade-a946-b3f9ccf86eea"
+      "id": "3b19f2ec-0663-46d3-aceb-b1fed037d62d"
     },
     {
       "cell_type": "code",
@@ -671,7 +673,7 @@
       "source": [
         "`-` 이름을 숫자화"
       ],
-      "id": "1e6beb15-c79c-4ee8-8cdc-03ecbf53410b"
+      "id": "c56cd7a6-bf8b-44fe-b44d-3259a14906c5"
     },
     {
       "cell_type": "code",
@@ -706,7 +708,7 @@
       "source": [
         "`-` 텐서화 + one_hot-인코딩"
       ],
-      "id": "7efb9442-abff-444a-abcb-e5fdb23a4d6a"
+      "id": "126b4fa4-ba5d-4d41-84ad-861ab50caf75"
     },
     {
       "cell_type": "code",
@@ -807,7 +809,7 @@
         "`-` `X1` -\\> `여성특징`, `X1` -\\> `여성bias`, `X2` -\\> `남성특징`, `X2`\n",
         "-\\> `남성bias` 구현"
       ],
-      "id": "3aef0e47-4eb2-4976-9d65-d3531b24ba48"
+      "id": "9427ccee-9d76-4c9a-992b-5596c39bb471"
     },
     {
       "cell_type": "code",
@@ -850,7 +852,7 @@
         "\n",
         "`-` step1: yhat을 구하자."
       ],
-      "id": "9792106b-d761-4bf3-8a25-049e0122774f"
+      "id": "69f806e2-ec1c-4172-8263-550dd32a93f9"
     },
     {
       "cell_type": "code",
@@ -873,7 +875,7 @@
       "source": [
         "`-` step2: 손실계산"
       ],
-      "id": "71dd9dff-8335-4159-8675-fa87b57fef17"
+      "id": "9a996465-5873-4bc5-8d4c-1db232c0756b"
     },
     {
       "cell_type": "code",
@@ -894,7 +896,7 @@
       "source": [
         "`-` step3: 미분"
       ],
-      "id": "218428c6-0f8b-469d-a1bf-32285f1bc7a8"
+      "id": "59f913d6-8b01-40b1-bb5e-1b6df559a117"
     },
     {
       "cell_type": "code",
@@ -962,7 +964,7 @@
       "source": [
         "`-` step4: update"
       ],
-      "id": "e9e03ae9-3a49-49e9-a934-6a99d66c73f8"
+      "id": "8fdd2ab0-fde5-417c-b8ab-09bd34c0d4b5"
     },
     {
       "cell_type": "code",
@@ -1044,7 +1046,7 @@
       "source": [
         "## E. 코드정리"
       ],
-      "id": "69da1ace-ef07-43f7-b9b2-fdcc888d5f83"
+      "id": "ab8289f6-7426-40e5-b223-e9fca6becd89"
     },
     {
       "cell_type": "code",
@@ -1108,9 +1110,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## F. 모형의 해석"
+        "## F. 모형의 해석 – 쉬운 경우"
       ],
-      "id": "11e4e69d-45f5-4d0d-9763-965cd07e9675"
+      "id": "50638c00-b6b9-4a6b-bf1d-1d66993148f4"
     },
     {
       "cell_type": "code",
@@ -1129,7 +1131,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1102,
+      "execution_count": 1122,
       "metadata": {
         "tags": []
       },
@@ -1138,6 +1140,177 @@
         "pd.concat([df_train,df_yhat,df_ebdspace],axis=1)[56:]"
       ],
       "id": "0ea31d76-3b58-4051-bf16-abf04fb60347"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## G. 모형의 해석 – 어려운 경우 (1)"
+      ],
+      "id": "f5d23f93-73e5-4257-9649-b1291282ae2c"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1153,
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [],
+      "source": [
+        "df_view = pd.read_csv('https://raw.githubusercontent.com/guebin/DL2024/main/posts/solo.csv',index_col=0)\n",
+        "df_train = df_view.stack().reset_index().set_axis(['W','M','y'],axis=1)\n",
+        "w = {'옥순(IN)':0, '영자(IN)':1, '정숙(IS)':2, '영숙(IS)':3, '순자(EN)':4, '현숙(EN)':5, '서연(ES)':6, '보람(ES)':7, '하니(I)':8}\n",
+        "m = {'영식(IN)':0, '영철(IN)':1, '영호(IS)':2, '광수(IS)':3, '상철(EN)':4, '영수(EN)':5, '규빈(ES)':6, '다호(ES)':7}\n",
+        "X1 = torch.tensor(df_train['W'].map(w)) # length-n vector \n",
+        "X2 = torch.tensor(df_train['M'].map(m)) # length-n vector \n",
+        "E1 = torch.nn.functional.one_hot(X1).float()\n",
+        "E2 = torch.nn.functional.one_hot(X2).float()\n",
+        "y = torch.tensor(df_train['y']).float().reshape(-1,1)\n",
+        "#--#\n",
+        "torch.manual_seed(8)\n",
+        "l1 = torch.nn.Linear(in_features=9,out_features=2,bias=False)\n",
+        "b1 = torch.nn.Linear(in_features=9,out_features=1,bias=False)\n",
+        "l2 = torch.nn.Linear(in_features=8,out_features=2,bias=False)\n",
+        "b2 = torch.nn.Linear(in_features=8,out_features=1,bias=False)\n",
+        "sig = torch.nn.Sigmoid()\n",
+        "loss_fn = torch.nn.MSELoss()\n",
+        "params = list(l1.parameters()) + list(b1.parameters()) + list(l2.parameters()) + list(b2.parameters())\n",
+        "optimizr = torch.optim.Adam(params,lr=0.1)\n",
+        "#--#\n",
+        "for epoc in range(100):\n",
+        "    ## step1 \n",
+        "    W_features = l1(E1) \n",
+        "    W_bias = b1(E1)\n",
+        "    M_features = l2(E2) \n",
+        "    M_bias = b2(E2)\n",
+        "    match_scores = (W_features * M_features).sum(axis=1).reshape(-1,1) + W_bias + M_bias\n",
+        "    yhat = sig(match_scores)*5 \n",
+        "    ## step2 \n",
+        "    loss = loss_fn(yhat,y)\n",
+        "    ## step3 \n",
+        "    loss.backward()\n",
+        "    ## step4 \n",
+        "    optimizr.step()\n",
+        "    optimizr.zero_grad()"
+      ],
+      "id": "11c8452e-7f00-4dc8-8be3-01ecb5accfb2"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1154,
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [],
+      "source": [
+        "df_ebdspace = pd.DataFrame(torch.concat([W_features.data*M_features.data,W_bias.data, M_bias.data],axis=1))\n",
+        "df_ebdspace.columns = ['잠재특징1궁합','잠재특징2궁합','여성바이어스','남성바이어스']\n",
+        "df_yhat = pd.DataFrame(yhat.data,columns=['yhat'])\n",
+        "pd.concat([df_train,df_yhat,df_ebdspace],axis=1)[:56]"
+      ],
+      "id": "52ce9ac2-ef60-45e8-9626-a456a14da57a"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "-   I보다 E성향 남성이 좀 더 인기 있음.\n",
+        "-   E보다 I성향 여성이 좀 더 인기 있음.\n",
+        "-   궁합1: (IN, IN) = 1.4 // (IN, IS) = 0.4 // (IN, EN) = -0.2 // (IN,\n",
+        "    ES) = -1.2\n",
+        "-   궁합2: (IN, IN) = 0.3 // (IN, IS) = 0.8 // (IN, EN) = -1.0 // (IN,\n",
+        "    ES) = -0.5"
+      ],
+      "id": "b6afa91b-540f-4fd7-a43d-388ba139e43c"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1156,
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [],
+      "source": [
+        "pd.concat([df_train,df_yhat,df_ebdspace],axis=1)[56:]"
+      ],
+      "id": "d86928db-0403-4c82-8e4f-450626550e15"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## H. 모형의 해석 – 어려운 경우 (2)"
+      ],
+      "id": "3575a87e-4aef-4f2d-a6f1-b687541f2ca9"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1157,
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [],
+      "source": [
+        "df_view = pd.read_csv('https://raw.githubusercontent.com/guebin/DL2024/main/posts/solo.csv',index_col=0)\n",
+        "df_train = df_view.stack().reset_index().set_axis(['W','M','y'],axis=1)\n",
+        "w = {'옥순(IN)':0, '영자(IN)':1, '정숙(IS)':2, '영숙(IS)':3, '순자(EN)':4, '현숙(EN)':5, '서연(ES)':6, '보람(ES)':7, '하니(I)':8}\n",
+        "m = {'영식(IN)':0, '영철(IN)':1, '영호(IS)':2, '광수(IS)':3, '상철(EN)':4, '영수(EN)':5, '규빈(ES)':6, '다호(ES)':7}\n",
+        "X1 = torch.tensor(df_train['W'].map(w)) # length-n vector \n",
+        "X2 = torch.tensor(df_train['M'].map(m)) # length-n vector \n",
+        "E1 = torch.nn.functional.one_hot(X1).float()\n",
+        "E2 = torch.nn.functional.one_hot(X2).float()\n",
+        "y = torch.tensor(df_train['y']).float().reshape(-1,1)\n",
+        "#--#\n",
+        "torch.manual_seed(9)\n",
+        "l1 = torch.nn.Linear(in_features=9,out_features=2,bias=False)\n",
+        "b1 = torch.nn.Linear(in_features=9,out_features=1,bias=False)\n",
+        "l2 = torch.nn.Linear(in_features=8,out_features=2,bias=False)\n",
+        "b2 = torch.nn.Linear(in_features=8,out_features=1,bias=False)\n",
+        "sig = torch.nn.Sigmoid()\n",
+        "loss_fn = torch.nn.MSELoss()\n",
+        "params = list(l1.parameters()) + list(b1.parameters()) + list(l2.parameters()) + list(b2.parameters())\n",
+        "optimizr = torch.optim.Adam(params,lr=0.1)\n",
+        "#--#\n",
+        "for epoc in range(100):\n",
+        "    ## step1 \n",
+        "    W_features = l1(E1) \n",
+        "    W_bias = b1(E1)\n",
+        "    M_features = l2(E2) \n",
+        "    M_bias = b2(E2)\n",
+        "    match_scores = (W_features * M_features).sum(axis=1).reshape(-1,1) + W_bias + M_bias\n",
+        "    yhat = sig(match_scores)*5 \n",
+        "    ## step2 \n",
+        "    loss = loss_fn(yhat,y)\n",
+        "    ## step3 \n",
+        "    loss.backward()\n",
+        "    ## step4 \n",
+        "    optimizr.step()\n",
+        "    optimizr.zero_grad()"
+      ],
+      "id": "b9818630-8240-42f7-996a-8deeac5bca40"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1158,
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [],
+      "source": [
+        "df_ebdspace = pd.DataFrame(torch.concat([W_features.data*M_features.data,W_bias.data, M_bias.data],axis=1))\n",
+        "df_ebdspace.columns = ['잠재특징1궁합','잠재특징2궁합','여성바이어스','남성바이어스']\n",
+        "df_yhat = pd.DataFrame(yhat.data,columns=['yhat'])\n",
+        "pd.concat([df_train,df_yhat,df_ebdspace],axis=1)[:56]"
+      ],
+      "id": "6890cc6d-f466-4e85-981e-ef88b3615bce"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "-   몰라요"
+      ],
+      "id": "202783e1-6248-442a-84ef-10abfc652b0a"
     }
   ],
   "nbformat": 4,
